2004-11-07  Pawel Salek

	* libbalsa/address-book-{extern,gpe,ldap}.c: fix crashes in ::complete.

2004-11-07 14:07  PeterB

	* src/balsa-mblist.c: make balsa_app.mblist_tree_store a weak
	pointer, so we can detect when it has been destroyed.
	* src/main-window.c: provide a localizable tooltip for Reset
	_Filter menu item, and change its shortcut to _Reset Filter; add
	shortcut _Select All.
	* src/sendmsg-window.c: fix bug 156460--replace EUC-JP with
	ISO-2022-JP for Japanese language option.

2004-11-07 10:54  manu <eallaud@yahoo.fr>

	* libbalsa/mailbox_imap.c, src/ab-window.c, src/pref-manager.c:
	build with GTK_VERSION < 2.4.0.

2004-11-05  Carlos Morgado  <chbm gnome.org>

	* libbalsa/abook-completion.c: fix segfault on strncmp_word
	(glibc strncmp is sucking)

2004-11-06 09:41  PeterB

	* libbalsa/: abook-completion.c, abook-completion.h,
	address-book-extern.c, address-book-extern.h, address-book-ldif.c,
	address-book-ldif.h, address-book-vcard.c, address-book-vcard.h,
	address-entry.c: match user input at start of any word in key;
	use a single GCompletion with a key consisting of full_name,
	nick_name, and all mailboxes, space-separated; utf8_normalize
	and utf8_casefold all strings.

2004-11-05 20:31  PeterB

	* libbalsa/identity.c: build with GTK_VERSION < 2.4.0.
	* src/sendmsg-window.c: toggle button is now a GtkToggleToolButton.
	* libbalsa/address-entry.c: store only the current matches.
	* libbalsa/address-entry.c: copy address from src to dest(!).

2004-11-04 Albrecht Dreß <albrecht.dress@arcor.de>

	* libbalsa/: address-book-vcard.c, address-entry.c: small patch to
	address two utf8 related problems.

2004-11-04 17:07  PeterB

	* libbalsa/address-entry.c: do not pop down completions on
	receiving focus--it can be annoying.
	* libbalsa/address-entry.c: do not dequote address phrase.

2004-11-03 21:46  PeterB

	* libbalsa/address-entry.c: pop down completions on receiving
	focus.
	* libbalsa/address-entry.c: update completion list on cursor